fixed the visibility problem

--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
     display: flex;
 }
 
-#pixel {
+.pixel {
     flex:1; aspect-ratio: 1;
     border: 1px solid black;
+    width: 700px;
     background-color: aqua;
-
 }
 
 .pixel:hover{
